fixed margin error on container and some stray text and missing spaces on about me page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ a:hover
 }
 
 .container{
-    margin:5%;
+    margin:5% auto;
     background-color:white;
     max-width: 1080px;
     height:auto;
@@ -112,33 +112,6 @@ a:hover
    
 }
 
-#about{
-    position:absolute;
-    left:45%;
-    top:0%;
-    z-index:2;
-}
-
-#portfolio{
-    position:absolute;
-    left:31%;
-    top:45%;
-    z-index:2;
-}
-
-#contact{
-    position:absolute;
-    right:31%;
-    top:45%;
-    z-index:2;
-}
-
-
-#portfolio-icon, #contact-icon, #about-icon{
-    width:75%;
-    
-
-}
 
 #portfolio-icon:hover, #contact-icon:hover, #about-icon:hover{
    cursor: pointer;
@@ -164,35 +137,6 @@ a:hover
     border-radius: 50px;
 }
 
-.social img{
-    position:relative;
-    left:34%;
-    border:1px solid beige;
-    border-radius:100%;
-    height:60px;
-    margin:10px 30px 10px 30px;
-
-}
-
-
-.social{
-    color:grey;
-    margin-top:50px;
-    margin-bottom:10px;
-    border-bottom:solid 1px black;
-
-}
-#connect{
-    position:relative;
-    left:40%;
-}
-
-
-
- .social img:hover{
-    opacity: .8;
-        
- }
 
 .nav-icon{
     width:100px;
@@ -207,11 +151,6 @@ img.nav-icon{
 .nav{
     margin-top:50px;
     border-bottom:1px white solid;
-}
-
-#icon-container{
-    margin-left:60px;
-    margin-bottom:20px;
 }
 
 .carousel-inner{
@@ -244,12 +183,6 @@ span.carousel-control-prev-icon,span.carousel-control-next-icon{
     text-align: center;
 
 }
-
-#about-container{
-    padding:20px 100px 0px 100px;
-    
-}
-
 
 .carousel-item h4{
     color:grey;
